force-app/main/default/src/objects/MVN_Payer_Plan__c/MVN_Payer_Plan__c.object-meta.xml
<CustomObject>
    <label>Payer Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Payer Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payer Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>