force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_Channel_Detail__c.field-meta.xml
<CustomField>
    <fullName>MVN_Channel_Detail__c</fullName>
    <description>Payer master Sub-Type assigned by Precision (Includes Health Plan, EGWP, Employer, Discount)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>