force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_Medical_Channel__c.field-meta.xml
<CustomField>
    <fullName>MVN_Medical_Channel__c</fullName>
    <description>Payer master customized Medical Benefit Type field requested by Regeneron (Includes Commercial, Elderly, FFS Medicaid, Managed Medicaid, Medicare Advantage, Medicare Part A, Medicare Part B, Non-Benefit, Special Needs, Tricare/VA)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>