force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_Medical_PBM_Processor__c.field-meta.xml
<CustomField>
    <fullName>MVN_Medical_PBM_Processor__c</fullName>
    <description>Payer master Medical Benefit Type field requested by Regeneron to assist with technical implementation of Payer Spine for Medical Benefit analyses. Field content does not differ from PBM_VENDOR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical PBM Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>