force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_Payer__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payer__c</fullName>
    <description>Parent Payer for the Payer Plan</description>
    <label>Payer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesPayer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payer Plans</relationshipLabel>
    <relationshipName>Payer_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>