force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_Payer_Precision_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payer_Precision_Id__c</fullName>
    <description>Payer master unique ID assigned by Precision to each parent organization</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Payer Precision Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>