force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_PBM_Precision_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_PBM_Precision_Id__c</fullName>
    <description>Payer master unique ID assigned by Precision to each PBM aligned to hierarchy Managed Care Organizations</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PBM Precision Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>