force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_Pharmacy_Channel__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_Channel__c</fullName>
    <description>Payer master customized Pharmacy Benefit Type field requested by Regeneron (Includes ADAP, Cash, CHIP, Commercial, Elderly, FFS Medicaid, HIX, Managed Medicaid, Medicare Part D, Mix, Non-Benefit, Special Needs, Workers Comp)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>