force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_Pharmacy_PBM__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_PBM__c</fullName>
    <description>Payer master Pharmacy Benefit Type field requested by Regeneron to assist with technical implementation of Payer Spine for Pharmacy Benefit analyses. Field content does not differ from PBM_VENDOR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy PBM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>