force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_PX_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>MVN_PX_Date_Month__c</fullName>
    <description>Payer master Data Month of the Deliverable produced</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PX Data Month</label>
    <type>Date</type>
</CustomField>