force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_PX_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_PX_Delivery_Date__c</fullName>
    <description>Payer master Delivery Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PX Delivery Date</label>
    <type>Date</type>
</CustomField>