force-app/main/default/src/objects/MVN_Payer_Plan__c/fields/MVN_SRC_Data_Month__c.field-meta.xml
<CustomField>
    <fullName>MVN_SRC_Data_Month__c</fullName>
    <description>Payer master Data Month of the Source Data used</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SRC Data Month</label>
    <type>Date</type>
</CustomField>